config/chatwoot/manifests/namespace.yaml
# Chatwoot namespace
apiVersion: v1
kind: Namespace
metadata:
  name: chatwoot
  labels:
    app.kubernetes.io/name: chatwoot
